# bms_lv_rust

./: Cargo.toml  README.md  rust-toolchain.toml  t
.cargo/: config.toml
.github/workflows/: rust.yml
documentation/bms_lv_rust/: all.html  fn.__cortex_m_rt_main.html  fn.__embassy_main.html  fn.check_err_check.html  fn.ltc_function.html  fn.read_can.html  fn.send_can.html  fn.send_usb.html  fn.setup_bms.html  index.html  macro.get_byte!.html  macro.get_byte.html  macro.info.html  sidebar-items.js  static.BMS.html  static.CAN.html  static.ERR_CHECK.html  static.LTC.html  static.SPI.html  static.USB.html
documentation/bms_lv_rust/can_management/: fn.can_operation.html  index.html  sidebar-items.js
documentation/bms_lv_rust/can_management/can_controller/: enum.CanError.html  fn.CAN1_RX0.html  fn.CAN1_RX1.html  fn.CAN1_SCE.html  fn.CAN1_TX.html  fn.CAN2_RX0.html  fn.CAN2_RX1.html  fn.CAN2_SCE.html  fn.CAN2_TX.html  index.html  sidebar-items.js  struct.CanController.html  struct.Irqs1.html  struct.Irqs2.html
documentation/bms_lv_rust/can_management/frame/: index.html  (+2 more)
documentation/bms_lv_rust/ltc_management/: index.html  sidebar-items.js
documentation/bms_lv_rust/types/: enum.CanMsg.html  enum.TEMPERATURES.html  enum.VOLTAGES.html  index.html  sidebar-items.js
documentation/bms_lv_rust/usb_serial/: index.html  sidebar-items.js
src/: main.rs
src/can_management/: can_controller.rs  frame.rs  mod.rs
src/ltc_management/: ltc6811.rs  mod.rs  spi_device.rs
src/types/: bms.rs  mod.rs
src/usb_serial/: info_usb.rs  log.rs  mod.rs  serial_usb.rs  usb.rs
(+45 files in other folders)
