[package]
name = "bms_lv_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "^0.2.0", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono", "low-power"] }
embassy-sync = { version = "^0.6.1", features = ["defmt"] }
embassy-executor = { version = "^0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "^0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "^0.4.0", features = ["defmt" ] }
embassy-futures = { version = "^0.1.0"}
static_cell = "^1.2.0"
defmt = "^1.0.1"
defmt-serial = "^0.10"
embassy-usb-logger = "0.4.0" 

cortex-m = { version = "^0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "^0.7.0"
embedded-hal = "^0.2.6"
embedded-hal-bus = { version = "^0.2", features = ["async"] }
embedded-io = { version = "^0.6.0" }
embedded-io-async = { version = "^0.6.1" }
panic-halt = { version = "1.0.0"}
futures-util = { version = "^0.3.30", default-features = false }
heapless = { version = "^0.8", default-features = false }

log = "0.4.27"
libm = "0.2"

[profile.release]
debug = 2
test = false
